app/assets/stylesheets/campaigns.css
.content-wrapper {
    height: 100%;
    background-color: #f9f9f9;
}

.table > thead > tr.payment-header > th {
    background-color: #eaeaea;
    color: #666666;
}

.table > thead > tr > th {
    font-family: 'Raleway', sans-serif;
    font-size: 10.4pt;
}

.table > tbody > tr > td {
    font-family: 'Hind', sans-serif;
    font-weight: 500;
    font-size: 10.4pt;
    color: #666666;
}

.performance_table thead tr th:nth-child(2), .engagement_table thead tr th:nth-child(2) {
    /*width: 85px;*/
}

.brand_campaign_engagement_table thead tr th:nth-child(2), .brand_campaign_performance_table thead tr th:nth-child(2) {
    width: auto;
}

.brand_campaign_engagement_table tr td:nth-child(1), .brand_campaign_performance_table tr td:nth-child(1), .brand_campaign_engagement_table tr th:nth-child(1),  .brand_campaign_performance_table tr th:nth-child(1) {
    text-align: left;
}

.payment-div {
    margin: 0px 20px 20px 20px;
    height: 28px;
}

.btn-export {
    color: white;
    margin: 25px 5px 5px 5px;
    padding: 5px 36px;
    background-color: #f8c102;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    font-size: 11pt;
}

.btn-age {
    color: grey;
    margin: 6px 5px 5px 5px;
    padding: 4px 0px 4px 5px;
    background-color: #f9f9f9;
    border: 1.5px solid #cdcdcd;
    border-radius: 3px;
    width: 95%;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    font-size: 10pt;
}

.btn-country {
    color: grey;
    margin: 6px 5px 5px 5px;
    padding: 4px 0px 4px 5px;
    background-color: #f9f9f9;
    border: 1.5px solid #cdcdcd;
    border-radius: 3px;
    width: 95%;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    font-size: 10pt;
}

.angle-down-age {
    padding-left: 32%;

}

.angle-down-country {
    padding-left: 26%;

}

.dropdown-color {
    background-color: #f5f5f5;
}

#performance_list a, #engagement_list a {
    color: #555;
}

.payment-div > .payment-balance {
    font-size: 15px;
    margin-left: 20%;
    display: block;
    padding: 10px 10px 0 0;
}

#transaction-tabs {
    font-size: 18px;
}

.performance-tab {
    color: #00AEEF;
    vertical-align: middle;
    padding: 5px 5px 0px 0px;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 14pt;
}

.engagement-tab {
    color: #00AEEF;
    vertical-align: bottom;
    padding: 5px 5px 0px 0px;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 14pt;
}

.panel-campaigns {
    margin-bottom: 20px;
    background-color: #fff;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    border-radius: 0;
    /*-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);*/
    /*box-shadow: 0 1px 1px rgba(0,0,0,.05);*/
    padding: 20px 20px 0px 20px;
}

.status-circle {
    width: 8px;
    height: 8px;
    border-radius: 10px;
    display: inline-block;
}

.status-paid {
    background-color: #33cd31;
}

.status-pending {
    background-color: #fdc75d;
}

.status-failed {
    background-color: #ed1b26;
}


.performance_table th:nth-child(1),
.performance_table td:nth-child(1)
.engagement_table th:nth-child(1),
.engagement_table td:nth-child(1) {
    text-align: center ;
}

.table > thead >.payment-header > th {
    vertical-align: middle;
    border-right-color: #dddddd;
}

.table > tbody > tr > td {
    border-right-color: #dddddd;
    vertical-align: middle;
}


.cmn-toggle {
    position: absolute;
    margin-left: -9999px;
    visibility: hidden;
}
.cmn-toggle + label {
    display: block;
    position: relative;
    cursor: pointer;
    outline: none;
    user-select: none;
}

input.cmn-toggle-round + label {
    padding: 2px;
    width: 52px;
    height: 26px;
    background-color: #eaeaea;
    border-radius: 24px;
}
input.cmn-toggle-round + label:before,
input.cmn-toggle-round + label:after {
    display: block;
    position: absolute;
    top: 1px;
    left: 1px;
    bottom: 1px;
    content: "";
}
input.cmn-toggle-round + label:before {
    right: 1px;
    background-color: #dedede;
    border-radius: 24px;
    transition: background 0.4s;
    content: "x";
    color: white;
    padding-left: 32px;
    padding-top: 1px;

}
input.cmn-toggle-round + label:after {
    width: 22px;
    height: 22px;
    margin: 1px 2px 1px 2px;
    background-color: #fff;
    border-radius: 100%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    transition: margin 0.3s;
}
input.cmn-toggle-round:checked + label:before {
    background-color: #e72b52;
    content: "o";
    font-weight: 100;
    padding-left: 7px;
    padding-top: 2px;
    color: #e5e5e5;
}

input.cmn-toggle-round:checked + label:after {
    margin-left: 26px;
}

.pepsi-img-responsive {
    display: inline-block;
    width: 30px;
    height: 30px;
    border-radius: 50%;

}

.pepsi-img-none {
    display: inline-block;
    padding-left: 35px;
}

/*.performance_table > tbody > tr:nth-child(n+4):nth-child(-n+10) > td,*/
/*.engagement_table > tbody > tr:nth-child(n+4):nth-child(-n+10) > td {*/
    /*border-top: none;*/
    /*border-bottom: none;*/
    /*background: white;*/
/*}*/

@media
only screen and (max-width: 1130px) {
    .btn-export {
        font-size: 18px;
        color: white;
    }

    .btn-age {
        font-size: 18px;
    }

    .btn-country {
        font-size: 18px;
    }
}

@media
only screen and (max-width: 980px) {
    .btn-export {
        font-size: 15px;
        margin: 20px 3px 3px 5px;
        padding: 6px 25px 6px 25px;
    }
    .btn-age {
        font-size: 15px;
        margin: 10px 3px 3px 5px;
        padding: 6px 22px 6px 18px;
    }

    .btn-country {
        font-size: 15px;
        margin: 10px 3px 3px 5px;
        padding: 6px 22px 6px 8px;
    }
    .angle-down-age {
        padding-left: 40%;

    }
}

@media
only screen and (max-width: 800px) {
    .btn-export {
        font-size: 14px;
        margin: 20px 3px 3px 5px;
        padding: 6px 20px 6px 20px;
    }
   .btn-age {
        font-size: 14px;
        margin: 10px 3px 3px 4px;
        padding: 6px 22px 6px 18px;
    }

    .btn-country {
        font-size: 14px;
        margin: 10px 2px 3px 4px;
        padding: 6px 20px 6px 9px;
    }
    .angle-down-age {
        padding-left: 50%;

    }

    .angle-down-country {
        padding-left: 15%;

    }
}

@media
only screen and (max-width: 460px) {

    .payment-div {
        margin: 0px 20px 20px 20px;
        height: 64px;
    }

    table, thead, tbody, th, td, tr {
        display: block;
        border: 1px solid #dddddd;
    }

    thead tr {
        position: absolute;
        top: -9999px;
        left: -9999px;
    }

    .btn-export {
        font-size: 10px;
        color: white;
        margin: 15px 3px 3px 5px;
        padding: 5px 12px 5px 12px;
    }

    .btn-age {
        font-size: 10px;
        margin: 10px 3px 3px 5px;
        padding: 5px 22px 5px 9px;
    }

    .btn-country {
        font-size: 10px;
        margin: 10px 3px 3px 5px;
        padding: 5px 6px 5px 5px;
    }

    .angle-down-country {
        padding-left: 10%;

    }

    .pepsi-img-none {
        padding-left: 0px;
    }

    .performance_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(3):before { content: "Post Likes : ";  font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(4):before { content: "Reach : ";  font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Starts: ";  font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Ends: ";  font-weight: bold; }

    .engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
    .engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Likes : ";  font-weight: bold; }
    .engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Comments : ";  font-weight: bold; }
    .engagement_table > tbody > tr > td:nth-of-type(5):before { content: "Shares: ";  font-weight: bold; }
}

.campaign-content {
    min-height: 250px;
    padding: 15px 20px;
}

.campaign-create-wrapper {
    margin: 20px;
    background-color: rgba(255, 255, 255, 1);
    -webkit-box-shadow: 0 0 2px #999999;
    -moz-box-shadow: 0 0 2px #999999;
    box-shadow: 0 0 2px #999999;
    padding: 25px;
}

.campaign-influencer-picture {
    border-radius: 50%;
    border: 4px solid #cdcdcd;
    display: block;
    margin: 0 auto;
    width: 100px;
    height: 100px;
}

.campaign-create-wrapper .influencer-address {
    font-size: 12px;
}

.btn-message{
    background-color: #f8c102;
    margin-top: 17%;
    width: 138px;
    height: 38px;
    display: block;
    color: #FFFFFF;
}

.influencer-title {
    font-size: 13px;
}

.influencer-profile-info{
    padding: 28px 75px 34px 0;
    width: 100%;
}

.social-account-tab-content {
    border: 1px solid #ddd ;
    border-top: none;
    padding-top: 35px;
    padding-right: 30px;
    padding-bottom: 20px;
    margin-bottom: 20px;
    overflow: hidden;
}

.social-account-tabs .social-account-nav-tabs a {
    color: #696969;
}

.social-account-tabs .social-account-nav-tabs li.active .social-account-fa-edit {
    color: #3c8dbc;
}

.social-account-fa-edit {
    font-size: 1.5em;
    padding-right: 5px;
}

.social-account-tab-content label {
    padding-right: 15px;
}

.social-account-tab-content input:not([type=radio]), .social-account-tab-content select {
    width: 52%;
    display: inline;
    margin: 5px;
}

.text-pink   {
    font-size: 13px;
    color: #ff305a;
    font-weight: 600;
    padding: 20px 0;
}

.text-headline-form, .payment-form {
    padding-left: 35px;
    padding-top: 10px;
}

.text-headline-form input, .text-headline-form textarea {
    width: 70%;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 5px;
}

.text-headline-form textarea {
    resize: none;
}

.type-of-post {
    background-color: #ffffff;
    padding: 3px;
}

.payment-form select {
    background-color: #ffffff;
    padding: 3px;
    margin: 10px 0;
    width: 108px;
}

.payment-form input {
    margin: 10px 0;
    padding: 5px;

}

.payment-form .card-number {
    width: 220px;
}

.payment-form .card-holder-name {
    width: 270px;
}

.campaign-create-wrapper .btn-book-now {
    background-color: #e13f3c;
    color: white;
    margin-top: 5%;
    margin-left: 10px;
    padding: 8px 28px;
    font-weight: 600;
}

.campaign-create-wrapper .grey-color {
    background-color: #999999;
}

#error_explanation {
    width: 450px;
    border: 2px solid #ff3a38;
    padding: 7px;
    margin-bottom: 20px;
    background-color: #f0f0f0;
}

#error_explanation h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 14px;
    margin: -7px -7px 0 -7px;
    background-color: #ff3a38;
    color: #fff;
}

#error_explanation ul li {
    font-size: 13px;
    list-style: square;
    padding-top: 5px;
}

.campaign-date {
    width: 280px;
    background-color: #dbd9da;
    padding: 10px 20px;
    margin: 20px 0 0 7px;
}

.social-account-tab-content  input#campaign_cost{
    width: 150px;
}

.download-campaign {
    text-align: center;
    margin: 20px 0;
    padding-top: 20px;
}

.info-box-custom {
    border-top: 1px solid #eaeaea;
}

.btn-download-campaign {
    background-color:  #ff305a;
    color: white;
    width: 90%;
    font-size: 13px;
    font-weight: 600;
}

.campaign-view {
    margin-bottom: 20px;
}

.campaign-view label {
    padding-left: 50px;
    padding-right: 20px;
}

.campaign-view select {
    padding: 5px;
    background-color: white;
    width: 60%;
}

.btn-campaign-view {
    color: white;
    padding: 5px 40px;
    margin-left: 15px;
    background-color: #f8c102;
    font-weight: 600;
    font-size: 13px;
}

